[ADD] fixed horizontal scroll and added gamehost in Game class

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -10,3 +10,8 @@ body {
     font-weight: 400;
     font-style: normal;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
